<resources>
    <string name="app_name">UserRegistrationApp</string>
    <string name="activity_main_register_title">Register</string>
    <string name="activity_main_first_name_hint">First Name</string>
    <string name="activity_main_last_name">Last Name</string>
    <string name="activity_main_email_hint">Email</string>
    <string name="activity_main_cell_number_hint">Cell Number</string>
    <string name="activity_main_password_hint">password</string>
    <string name="activity_main_preview_button_text">PREVIEW DETAILS</string>
    <string name="activity_summary_heading">SUMMARY</string>
</resources>